<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="raspicontrol.activity.Setting_Dialog_Activity" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/marginBase"
                android:text="@string/setting_activity_dialog_username"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/et_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/marginBase"
                android:layout_weight="1"
                android:ems="10" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/marginBase"
                android:text="@string/setting_activity_dialog_password"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/marginBase"
                android:ems="10"
                android:inputType="textPassword" >

                <requestFocus />
            </EditText>

        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/marginBase"
                android:text="@string/setting_activity_dialog_quality"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/marginBase"
                android:orientation="vertical" >

                <RatingBar
                    android:id="@+id/rb_quality"
                    style="?android:attr/ratingBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:isIndicator="false"
                    android:max="4"
                    android:numStars="4"
                    android:rating="4"
                    android:stepSize="1" />

            </LinearLayout>

        </TableRow>

    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:weightSum="1" >

        <com.gc.materialdesign.views.ButtonRectangle
	        android:id="@+id/btn_ok"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="0.5"
	        android:background="@color/blue"
	        android:text="@string/setting_activity_dialog_ok" >
	    </com.gc.materialdesign.views.ButtonRectangle>
		
        <com.gc.materialdesign.views.ButtonRectangle
	        android:id="@+id/btn_cancel"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="0.5"
	        android:background="@color/blue"
	        android:text="@string/setting_activity_dialog_cancel" >
	    </com.gc.materialdesign.views.ButtonRectangle>

    </LinearLayout>

</LinearLayout>
